--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "naive-ui": "^2.25.1",
+    "node-sass": "~6.0",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^9.0.0",
+    "vfonts": "^0.0.3",
+    "vue-cli-plugin-buefy": "~0.3.8"
   },
   "browserslist": [
     "> 1%",
